// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputImage> renders 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputImage> when {disabled} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={false}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          Object {
            "backgroundColor": "#f4f4f4",
            "color": "#cccccc",
          },
          false,
          false,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputImage> when {error} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          Object {
            "borderColor": "#ef5160",
          },
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          false,
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          Object {
            "fontSize": 12,
            "lineHeight": 14.399999999999999,
          },
          false,
          false,
          false,
          false,
          Object {
            "color": "#9b9b9b",
          },
          false,
          false,
          Object {
            "color": "#ef5160",
            "marginVertical": 2.5,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
</View>
`;

exports[`<InputImage> when {hint} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          false,
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          Object {
            "fontSize": 12,
            "lineHeight": 14.399999999999999,
          },
          false,
          false,
          false,
          false,
          Object {
            "color": "#9b9b9b",
          },
          false,
          false,
          Object {
            "marginVertical": 2.5,
          },
        ]
      }
    >
      Hello World
    </Text>
  </View>
</View>
`;

exports[`<InputImage> when {label} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#4a4a4a",
            "fontFamily": undefined,
          },
          false,
          false,
          false,
          false,
          Object {
            "fontSize": 16,
            "lineHeight": 20.8,
          },
          Object {
            "fontSize": 12,
            "lineHeight": 14.399999999999999,
          },
          false,
          false,
          false,
          false,
          Object {
            "color": "#9b9b9b",
          },
          false,
          false,
          Object {
            "marginVertical": 2.5,
          },
        ]
      }
    >
      Hello World
    </Text>
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputImage> when {style} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      Object {
        "backgroundColor": "rgba(0,255,0,0.25)",
        "padding": 10,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
        },
        Array [
          Object {
            "flex": 1,
          },
          false,
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
</View>
`;

exports[`<InputImage> when {value} 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "flex-start",
        "display": "flex",
        "flexDirection": "row",
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignContent": "center",
          "alignItems": "center",
          "backgroundColor": "#f4f4f4",
          "justifyContent": "center",
        },
        Object {
          "backgroundColor": "#CDD2D4",
          "borderRadius": 3,
          "height": 60,
          "width": 60,
        },
      ]
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "http://soyjavi.com/assets/images/soyjavi.jpg",
        }
      }
      style={
        Object {
          "backgroundColor": "#CDD2D4",
          "borderRadius": 3,
          "height": 60,
          "width": 60,
        }
      }
    />
    <ActivityIndicator
      animating={true}
      color="white"
      hidesWhenStopped={true}
      size="large"
      style={
        Array [
          Object {
            "position": "absolute",
          },
          false,
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "marginBottom": 16,
        },
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "marginLeft": 10,
          },
        ],
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      autoCorrect={false}
      blurOnSubmit={true}
      editable={true}
      keyboardType="default"
      multiline={false}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholderTextColor="#9b9b9b"
      style={
        Array [
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#dbdbdb",
            "borderRadius": 2.5,
            "borderWidth": 1,
            "color": "#4a4a4a",
            "fontSize": 16,
            "fontWeight": "normal",
            "paddingHorizontal": 5,
            "paddingVertical": 7.5,
            "width": "100%",
          },
          false,
          false,
          undefined,
        ]
      }
      underlineColorAndroid="transparent"
      value="http://soyjavi.com/assets/images/soyjavi.jpg"
    />
  </View>
</View>
`;
